// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkDropdownChip should render correctly 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--default"
    data-backpack-ds-component="DropdownChip"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
      data-backpack-ds-component="Text"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        aria-hidden="true"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.57 1.57 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with a "className" attribute 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--default custom-class"
    data-backpack-ds-component="DropdownChip"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
      data-backpack-ds-component="Text"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        aria-hidden="true"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.57 1.57 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with type="default" 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--default"
    data-backpack-ds-component="DropdownChip"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
      data-backpack-ds-component="Text"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        aria-hidden="true"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.57 1.57 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with type="default" and a leading accessory view 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--default"
    data-backpack-ds-component="DropdownChip"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-chip__leading-accessory-view"
    >
      <span>
        Leading
      </span>
    </span>
    <span
      class="bpk-text bpk-text--footnote"
      data-backpack-ds-component="Text"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        aria-hidden="true"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.57 1.57 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with type="default" and disabled 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--default bpk-chip--disabled bpk-chip--default-disabled"
    data-backpack-ds-component="DropdownChip"
    disabled=""
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
      data-backpack-ds-component="Text"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        aria-hidden="true"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.57 1.57 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with type="default" and selected 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="bpk-chip bpk-chip--default bpk-chip--default-selected"
    data-backpack-ds-component="DropdownChip"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
      data-backpack-ds-component="Text"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        aria-hidden="true"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.57 1.57 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with type="default", selected and disabled 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="bpk-chip bpk-chip--default bpk-chip--disabled bpk-chip--default-disabled"
    data-backpack-ds-component="DropdownChip"
    disabled=""
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
      data-backpack-ds-component="Text"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        aria-hidden="true"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.57 1.57 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with type="on-dark" 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--on-dark"
    data-backpack-ds-component="DropdownChip"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
      data-backpack-ds-component="Text"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        aria-hidden="true"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.57 1.57 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with type="on-dark" and a leading accessory view 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--on-dark"
    data-backpack-ds-component="DropdownChip"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-chip__leading-accessory-view"
    >
      <span>
        Leading
      </span>
    </span>
    <span
      class="bpk-text bpk-text--footnote"
      data-backpack-ds-component="Text"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        aria-hidden="true"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.57 1.57 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with type="on-dark" and disabled 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--on-dark bpk-chip--disabled bpk-chip--on-dark-disabled"
    data-backpack-ds-component="DropdownChip"
    disabled=""
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
      data-backpack-ds-component="Text"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        aria-hidden="true"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.57 1.57 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with type="on-dark" and selected 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="bpk-chip bpk-chip--on-dark bpk-chip--on-dark-selected"
    data-backpack-ds-component="DropdownChip"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
      data-backpack-ds-component="Text"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        aria-hidden="true"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.57 1.57 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with type="on-dark", selected and disabled 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="bpk-chip bpk-chip--on-dark bpk-chip--disabled bpk-chip--on-dark-disabled"
    data-backpack-ds-component="DropdownChip"
    disabled=""
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
      data-backpack-ds-component="Text"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        aria-hidden="true"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.57 1.57 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with type="on-image" 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--on-image"
    data-backpack-ds-component="DropdownChip"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
      data-backpack-ds-component="Text"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        aria-hidden="true"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.57 1.57 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with type="on-image" and a leading accessory view 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--on-image"
    data-backpack-ds-component="DropdownChip"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-chip__leading-accessory-view"
    >
      <span>
        Leading
      </span>
    </span>
    <span
      class="bpk-text bpk-text--footnote"
      data-backpack-ds-component="Text"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        aria-hidden="true"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.57 1.57 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with type="on-image" and disabled 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--on-image bpk-chip--disabled bpk-chip--on-image-disabled"
    data-backpack-ds-component="DropdownChip"
    disabled=""
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
      data-backpack-ds-component="Text"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        aria-hidden="true"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.57 1.57 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with type="on-image" and selected 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="bpk-chip bpk-chip--on-image bpk-chip--on-image-selected"
    data-backpack-ds-component="DropdownChip"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
      data-backpack-ds-component="Text"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        aria-hidden="true"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.57 1.57 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkDropdownChip should render correctly with type="on-image", selected and disabled 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="bpk-chip bpk-chip--on-image bpk-chip--disabled bpk-chip--on-image-disabled"
    data-backpack-ds-component="DropdownChip"
    disabled=""
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--footnote"
      data-backpack-ds-component="Text"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <svg
        aria-hidden="true"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.57 1.57 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;
